# motopy

./: .gitignore  LICENSE  README.md  changelog.md  demo.py  pyproject.toml  readme_zh.md  testall.py
motopy/: __init__.py  constants.py  generate.py  parse.py  port.py  scan.py  token.py  translate.py  utils.py
tests/: array_test.m  array_test.py  average.m  block_test.m  block_test.py  break_test.m  break_test.py  cell_test.m  cell_test.py  cmd_test.m  cmd_test.py  continue_test.m  continue_test.py  data.mat  dir_test.m  findSqrRootIndex.m  findSqrRootIndex.py  find_test.m  find_test.py  for_range_test.m  for_range_test.py  for_test.m  for_test.py  func.m  func.py  func_test.m  func_test.py  func_test2.m  func_test2.py  func_without_end.m  func_without_end.py  func_without_end_test.m  func_without_end_test.py  global_test.m  global_test.py  if_else_test.m  if_else_test.py  length_test.m  length_test.py  load_test.m  (+22 more)
