[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motopy"
version = "2.0.0"
description = "The tool of converting Matlab/Octave code TO PYthon."
authors = [
    { name="Jackie Wang", email="falwat@163.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/falwat/motopy"
"Bug Tracker" = "https://github.com/falwat/motopy/issues"
